<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="itm_jdl_film">judul film</string>
    <string name="itm_rls">rilis</string>
    <string name="itm_sin">sinopsis</string>
    <string name="itm_act">aktor</string>
    <string name="itm_kat">kategori</string>
    <string name="itm_sta">status</string>
    <string name="itm_drs">durasi</string>
    <string name="itm_bhs">bahasa</string>
    <string name="itm_cast1">cast1</string>
    <string name="itm_cast2">cast2</string>
    <string name="itm_cast3">cast3</string>
    <string name="itm_cast4">cast4</string>
    <string name="itm_cast5">cast5</string>
    <string name="lbl_bhs">Original Language :</string>
    <string name="lbl_sin">Overview</string>
    <string name="lbl_ply">Top Billed Cast</string>
    <string name="lbl_kat">Genre :</string>
    <string name="lbl_rls">Release Info :</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_detail">Movie Information</string>
    <string name="lbl_sta">Status :</string>
    <string name="lbl_drs">Duration :</string>
    <string-array name="dt_judul">
        <item>A STAR</item>
        <item>AQUAMAN</item>
        <item>AVANGER INFINITY WAR</item>
        <item>BIRDBOX</item>
        <item>BOHEMIAN RAPSODY</item>
        <item>BUMBLEBEE</item>
        <item>CREED 2</item>
        <item>ONCE UPON A DEADPOOL</item>
        <item>HOW TO TRAIN YOUR DRAGON: THE HIDDEN WORLD</item>
        <item>DRAGON BALL SUPER: BROLY</item>
        <item>GLASS</item>
        <item>HUNTER KILLER</item>
        <item>MARRY POPINS</item>
        <item>MORTAL ENGINE</item>
        <item>PREMAN PENSIUN</item>
        <item>ROBINHOOD</item>
        <item>SPIDERMAN: IN TO THE SPIDER VERSE</item>
        <item>THE GIRL IN THE SPIDER"'"S WEB</item>
        <item>THE MULE</item>
        <item>VENOM</item>
    </string-array>
    <string-array name="dt_pemain">
        <item>Lady Gaga, Bradley Cooper, Sam Elliott, Andrew Dice Clay, Rafi Gavron</item>
        <item>Jason Momoa, Amber Heard, Willem Dafoe, Patrick Wilson, Nicole Kidman</item>
        <item>Robert Downey Jr, Chris Hemsworth, Chris Evan, Mark Rufallo, Scarlett Johansson</item>
        <item>Sandra Bullock, Trevante Rhodes, Jhon Malkovich, Sarah Paulson, Jacki Weaver</item>
        <item>Rami Malek, Gwilyn Lee, Ben Hardy, Joseph Mazzello, Lucy Boynton</item>
        <item>Hailee Steinfeld, Jorge Lendeborg Jr, Jhon Cena, Jason Ian Drucker, Pamela Adlon</item>
        <item>RMochael B Jordan, Sylevester Stallone, Dolph Lundgren, Florian Munteanu, Tessa Thompson</item>
        <item>Ryan Reynolds, Fred Savage, Josh Brolin, Morena Baccarin, Julian Dennison</item>
        <item>Jay Baruchel, America Ferrera, F Murray Abraham, Cate Blanchett, Gerard Butler</item>
        <item>Masako Nozawa, Ryou Horikawa, Bin Shimada, Ryusei Nakao, Banjou Ginga</item>
        <item>James McAvoy, Bruce Willis, Anya Taylor, Sarah Paulson, Samuel L Jackson</item>
        <item>Gerard Butler, Gary Oldman, Toby Sthepens, Common, Linda Cardellini</item>
        <item>Emily Blunt, Lin Manuel Miranda, Ben Wishaw, Emily Mortimer, Pixie Davies</item>
        <item>Hera Hilmar, Robert Sheehan, Hugo Weaving, Jihae, Ronan Raftery</item>
        <item>Epi Kusnandar, Tya Arifin, Soraya Rasyid, Andra Manihot, Sandi Tile</item>
        <item>Taron Egerton, Jamie Foxx, Ben Mendelsolm, Eve Hewson, Jamie Dornan</item>
        <item>Shameik Moore, Jake Jphnson, Hailee Steinfeld, Mahershala Ali, Brian Tyree Henry</item>
        <item>Claire Foy, Sverrir Gudnason, Lakeith Stanfield, Sylvia Hoeks, Stephen Merchant</item>
        <item>Clint Eastwood, Bradley Cooper, Laurence Fishburne, Michael Pefia, Dianne Wiest</item>
        <item>Tom Hardy, Michelle Williams, Riz Ahmed, Scott Haze, Reid Scott</item>
    </string-array>
    <string-array name="dt_cast1">
        <item>Lady Gaga</item>
        <item>Jason Momoa</item>
        <item>Robert Downey Jr</item>
        <item>Sandra Bullock</item>
        <item>Rami Malek</item>
        <item>Hailee Steinfeld</item>
        <item>RMochael B Jordan</item>
        <item>Ryan Reynolds</item>
        <item>Jay Baruchel</item>
        <item>Masako Nozawa</item>
        <item>James McAvoy</item>
        <item>Gerard Butler</item>
        <item>Emily Blunt</item>
        <item>Hera Hilmar</item>
        <item>Epi Kusnandar</item>
        <item>Taron Egerton</item>
        <item>Shameik Moore</item>
        <item>Claire Foy</item>
        <item>Clint Eastwood</item>
        <item>Tom Hardy</item>
    </string-array>
    <string-array name="dt_cast2">
        <item>Bradley Cooper</item>
        <item>Amber Heard</item>
        <item>Chris Hemsworth</item>
        <item>Trevante Rhodes</item>
        <item>Gwilyn Lee</item>
        <item>Jorge Lendeborg Jr</item>
        <item>Sylevester Stallone</item>
        <item>Fred Savage</item>
        <item>America Ferrera</item>
        <item>Ryou Horikawa</item>
        <item>Bruce Willis</item>
        <item>Gary Oldman</item>
        <item>Lin Manuel Miranda</item>
        <item>Robert Sheehan</item>
        <item>Tya Arifin</item>
        <item>Jamie Foxx</item>
        <item>Jake Johnson</item>
        <item>Sverrir Gudnason</item>
        <item>Bradley Cooper</item>
        <item>Michelle Williams</item>
    </string-array>
    <string-array name="dt_cast3">
        <item>Sam Elliott</item>
        <item>Willem Dafoe</item>
        <item>Chris Evan</item>
        <item>Jhon Malkovich</item>
        <item>Ben Hardy</item>
        <item>Jhon Cena</item>
        <item>Dolph Lundgren</item>
        <item>Josh Brolin</item>
        <item>F Murray Abraham</item>
        <item>Bin Shimada</item>
        <item>Anya Taylor</item>
        <item>Toby Sthepens</item>
        <item>Ben Wishaw</item>
        <item>Hugo Weaving</item>
        <item>Soraya Rasyid</item>
        <item>Ben Mendelsolm</item>
        <item>Hailee Steinfeld</item>
        <item>Lakeith Stanfield</item>
        <item>Laurence Fishburne</item>
        <item>Riz Ahmed</item>
    </string-array>
    <string-array name="dt_cast4">
        <item>Andrew Dice Clay</item>
        <item>Patrick Wilson</item>
        <item>Mark Rufallo</item>
        <item>Sarah Paulson</item>
        <item>Joseph Mazzello</item>
        <item>Jason Ian Drucker</item>
        <item>Florian Munteanu</item>
        <item>Morena Baccarin</item>
        <item>Cate Blanchett</item>
        <item>Ryusei Nakao</item>
        <item>Sarah Paulson</item>
        <item>Common</item>
        <item>Emily Mortimer</item>
        <item>Jihae</item>
        <item>Andra Manihot</item>
        <item>Eve Hewson</item>
        <item>Mahershala Ali</item>
        <item>Sylvia Hoeks</item>
        <item>Michael Pefia</item>
        <item>Scott Haze</item>
    </string-array>
    <string-array name="dt_cast5">
        <item>Rafi Gavron</item>
        <item>Nicole Kidman</item>
        <item>Scarlett Johansson</item>
        <item>Jacki Weaver</item>
        <item>Lucy Boynton</item>
        <item>Pamela Adlon</item>
        <item>Tessa Thompson</item>
        <item>Julian Dennison</item>
        <item>Gerard Butler</item>
        <item>Banjou Ginga</item>
        <item>Samuel L Jackson</item>
        <item>Linda Cardellini</item>
        <item>Pixie Davies</item>
        <item>Ronan Raftery</item>
        <item>Sandi Tile</item>
        <item>Jamie Dornan</item>
        <item>Brian Tyree Henry</item>
        <item>Stephen Merchant</item>
        <item>Dianne Wiest</item>
        <item>Reid Scott</item>
    </string-array>
</resources>